--- a/prev/index.html
+++ b/prev/index.html
@@ -7,11 +7,11 @@
         <meta name="author" content="" />
         <title>BattleReadyBrushstrokes</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="../jw-paints/src/assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../jw-paints/src/css/styles.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -23,22 +23,22 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../jw-paints/src/components/brushstrokes-about-page/about.html">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../jw-paints/src/components/brushstrokes-contact-page/contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../jw-paints/src/components/brushstrokes-pricing-page/pricing.html">Pricing</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../jw-paints/src/components/brushstrokes-faq-page/faq.html">FAQ</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="blog-home.html">Blog Home</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
+                                    <li><a class="dropdown-item" href="../jw-paints/src/components/brushstrokes-blog/blog-home.html">Blog Home</a></li>
+                                    <li><a class="dropdown-item" href="../jw-paints/src/components/brushstrokes-blog/blog-post.html">Blog Post</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
+                                    <li><a class="dropdown-item" href="../jw-paints/src/components/brushstrokes-portfolio-page/portfolio-overview.html">Portfolio Overview</a></li>
+                                    <li><a class="dropdown-item" href="../jw-paints/src/components/brushstrokes-portfolio-page/portfolio-item.html">Portfolio Item</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -59,7 +59,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="./assets/Dreadnaught_01.PNG" alt="..." /></div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="../jw-paints/src/assets/gallery/Dreadnaught_01.PNG" alt="..." /></div>
                     </div>
                 </div>
             </header>
@@ -228,6 +228,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../jw-paints/src/assets/styleing-js/scripts.js"></script>
     </body>
 </html>
